--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -1,18 +1,26 @@
+body{
+    background-color:lightsteelblue !important;
+}
+
 header {
-    background-color: #0091ea;
     font-family: Arial, Helvetica, sans-serif;
     margin-top: 0;
     padding: 10px 0;
 }
 
 h1{
+    background-color:rgb(11, 31, 31);
+    color: #f7f2f2de;
     text-align: center;
     margin: 0;
+    padding-top: 1em;
+    padding-bottom: 2em;
+    text-decoration: underline;
 }
 
 table {
     border-collapse: collapse;
-    font-size: 16px;
+    font-size: 18px;
     padding: 1.5px;
     text-align: center;
     width: 100%;
@@ -29,11 +37,11 @@ table th, table td {
 
 tbody tr {
     border-bottom: .5px solid #aaaaaa;
-    background-color: #ffffff;
+    background-color: #f7f2f2de;
 }
 
 tbody tr:nth-of-type(even){
-    background-color: #f1f1f1;
+    background-color: #eff3f4b6;
 }
 
 tbody tr:last-of-type {
@@ -41,7 +49,16 @@ tbody tr:last-of-type {
 }
 
 #inputDiv{
-    padding-left: 5em;
+    padding-top: 2em;
+}
+#createIn{
+    padding-left: 2em;
+}
+
+#createTask{
+    padding-left: 2em;
+    margin-left: 5%;
+    margin-right: 1em;
 }
 
 #tasksHeader{
@@ -61,4 +78,7 @@ tbody tr:last-of-type {
     border: none;
     background: gray;
     position: relative;
+}
+#submitButton{
+    margin-right: 50%;
 }
