--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -1,14 +1,16 @@
 body{
-    background-color:lightsteelblue !important;
+    background-color:rgb(198, 208, 221) !important;
 }
-
+/* lightsteelblue */
 header {
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif; */
     margin-top: 0;
     padding: 10px 0;
 }
 
 h1{
+    font-family:monospace;
+    text-transform:uppercase;
     background-color:rgb(11, 31, 31);
     color: #f7f2f2de;
     text-align: center;
@@ -19,6 +21,8 @@ h1{
 }
 
 table {
+    font-family:monospace;
+    text-transform:uppercase;
     border-collapse: collapse;
     font-size: 18px;
     padding: 1.5px;
@@ -27,28 +31,33 @@ table {
 }
 
 thead {
-    background-color: #f1f1f1;
-    font-weight: 600;
+    background-color: rgb(198, 208, 221);
+    font-size: 25px;
+    
+    color: white;
 }
 
 table th, table td {
     padding: 10px 20px;
+
 }
 
 tbody tr {
     border-bottom: .5px solid #aaaaaa;
-    background-color: #f7f2f2de;
+    background-color: rgb(198, 208, 221);
 }
 
 tbody tr:nth-of-type(even){
-    background-color: #eff3f4b6;
+    background-color: rgb(213, 221, 233);
 }
 
 tbody tr:last-of-type {
-    border-bottom: 2px solid #f1f1f1;
+    border-bottom: 2px solid rgb(198, 208, 221);
 }
 
 #inputDiv{
+    font-family:monospace;
+    text-transform:uppercase;
     padding-top: 2em;
 }
 #createIn{
